Hide createa invoice on mobile, fix payment form

--- a/src/pages/Invoices/components/OrderPaymentForm/styles.scss
+++ b/src/pages/Invoices/components/OrderPaymentForm/styles.scss
@@ -2,6 +2,10 @@
   position: relative;
 }
 
+.hidden {
+  display: none !important;
+}
+
 .input {
   padding: 9px 5px;
   display: block;
